[REFACTOR] Improve getAllOrganizations implementation
- Refactored MomofinAdminController.getAllOrganizations
  - Replaced collect(Collectors.toList()) with more concise toList()
- Updated OrganizationService.getAllOrganizations
  - Added @Transactional(readOnly = true) for performance optimization
- Improved OrganizationResponse.fromOrganization
  - Replaced setter calls with more concise constructor
- No changes in functionality, all tests still pass
- Enhances code readability and performance